Adjust header sizes relocate beforeafter images Fix wrong links Fix wrong bolds show overflow on static pages Show arrows only in single image fancybox Play first testimonis video paused the first time

--- a/less/style.less
+++ b/less/style.less
@@ -56,7 +56,7 @@ position:relative;
 
  .prev { background-image: url('../img/esquerra_inactiu.png'); right:130px; &:hover { background-image: url('../img/esquerra_actiu.png');}}
  .next { background-image: url('../img/dreta_inactiu.png'); right:90px; &:hover { background-image: url('../img/dreta_actiu.png');}}
- .download { background-image: url('../img/descarregar_inactiu.png'); right:25px; &:hover { background-image: url('../img/descarrega_actiu.png');}}
+ .download { background-image: url('../img/descarregar_inactiu.png'); right:25px; &:hover { background-image: url('../img/descarregar_actiu.png');}}
  .closef { background-image: url('../img/tancar_inactiu.png'); right:-15px; &:hover { background-image: url('../img/tancar_actiu.png');}}
 
  }
@@ -74,6 +74,12 @@ body {
 }
 
 
+.about, .credits {
+  h1, h2 {
+    font-weight: normal;
+  }
+}
+
 .about {
   h2 {margin:10px 0;}
   margin-top:40px;
@@ -89,8 +95,6 @@ body {
       strong {font-family: "InterstateBold", "Verdana"; font-size: 16px;}}
     
 }
-
-html {overflow:hidden;}
 
 a:focus { 
     outline: none; 
@@ -411,7 +415,7 @@ i.fletxa {
                               }
                        
                } 
-    &#miratges { h3 { margin-left:220px; width:150px; } }
+    &#miratges { h3 { margin-left:230px; width:180px; } }
     &#testimonis { h3 { margin-left:260px; width:180px; } }
 }
 
